<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Platinum"
    tools:context=".Fragments.Myaccount">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.makeramen.roundedimageview.RoundedImageView
                android:src="@drawable/usericon"
                android:layout_marginTop="25sp"
                android:layout_marginStart="35sp"
                android:layout_width="54sp"
                android:layout_height="54sp"></com.makeramen.roundedimageview.RoundedImageView>
            <GridLayout
                android:layout_marginVertical="8sp"
                android:paddingVertical="12sp"
                android:background="@drawable/grid_bg"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/yourOrdersBtn"
                    android:text="@string/string7"
                    android:paddingVertical="15sp"
                    android:paddingHorizontal="38sp"
                    android:textSize="17sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="25sp"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/button_bg"
                    android:layout_width="170sp"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/buyAgainBtn"
                    android:text="@string/string8"
                    android:paddingVertical="15sp"
                    android:paddingHorizontal="42sp"
                    android:textSize="17sp"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="25sp"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/button_bg"
                    android:layout_width="170sp"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/yourAccountBtn"
                    android:text="@string/string9"
                    android:paddingVertical="15sp"
                    android:paddingHorizontal="33sp"
                    android:textSize="17sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="25sp"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/button_bg"
                    android:layout_width="170sp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/yourListBtn"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="25sp"
                    android:text="@string/string10"
                    android:paddingVertical="15sp"
                    android:paddingHorizontal="42sp"
                    android:textSize="17sp"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/button_bg"
                    android:layout_width="170sp"
                    android:layout_height="wrap_content">
                </TextView>

            </GridLayout>

            <LinearLayout
                android:paddingVertical="25sp"
                android:background="@color/white"
                android:layout_marginVertical="8sp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:paddingHorizontal="15sp"
                    android:text="@string/string4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/dateprefBtn"
                    android:textColor="@color/black"
                    android:textAlignment="textStart"
                    android:text="@string/string5"
                    android:drawablePadding="8sp"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingHorizontal="15sp"
                    android:drawableLeft="@drawable/perm_device_information"
                    android:drawableRight="@drawable/arrow_right"
                    android:layout_marginTop="19sp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginTop="15dp"
                    android:background="@color/LightGray"></View>
                <Button
                    android:id="@+id/themeBtn"
                    android:textColor="@color/black"
                    android:textAlignment="textStart"
                    android:text="@string/string6"
                    android:textSize="12sp"
                    android:drawablePadding="8sp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingHorizontal="15sp"
                    android:drawableLeft="@drawable/app_theme"
                    android:drawableRight="@drawable/arrow_right"
                    android:layout_marginTop="15sp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginTop="15dp"
                    android:background="@color/LightGray"></View>

                <Button
                    android:id="@+id/languageBtn"
                    android:textColor="@color/black"
                    android:textAlignment="textStart"
                    android:text="@string/string11"
                    android:textSize="12sp"
                    android:drawablePadding="8sp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingHorizontal="15sp"
                    android:drawableLeft="@drawable/language"
                    android:drawableRight="@drawable/arrow_right"
                    android:layout_marginTop="15sp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>
            </LinearLayout>


        <LinearLayout
            android:paddingVertical="25sp"
            android:background="@color/white"
            android:layout_marginVertical="8sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"
                android:paddingHorizontal="15sp"
                android:text="@string/string0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/policiesBtn"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:text="@string/string1"
                android:drawablePadding="8sp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-condensed"
                android:paddingHorizontal="15sp"
                android:drawableLeft="@drawable/policy_ic"
                android:drawableRight="@drawable/arrow_right"
                android:layout_marginTop="19sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="13sp"
                android:layout_marginTop="15dp"
                android:background="@color/LightGray"></View>
            <Button
                android:id="@+id/supportBtn"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:text="@string/string2"
                android:textSize="12sp"
                android:drawablePadding="8sp"
                android:fontFamily="sans-serif-condensed"
                android:paddingHorizontal="15sp"
                android:drawableLeft="@drawable/support_agent"
                android:drawableRight="@drawable/arrow_right"
                android:layout_marginTop="15sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="13sp"
                android:layout_marginTop="15dp"
                android:background="@color/LightGray"></View>

            <Button
                android:id="@+id/aboutBtn"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:text="@string/string3"
                android:textSize="12sp"
                android:drawablePadding="8sp"
                android:fontFamily="sans-serif-condensed"
                android:paddingHorizontal="15sp"
                android:drawableLeft="@drawable/info_outline_"
                android:drawableRight="@drawable/arrow_right"
                android:layout_marginTop="15sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!-- TODO: Update blank fragment layout -->


</LinearLayout>